Version 1.62
------------
Add sockopt=TCP_NODELAY mount option.

Version 1.61
------------
Fix append problem to Samba servers (files opened with O_APPEND could
have duplicated data). Fix oops in cifs_lookup. Workaround problem
mounting to OS/400 Netserve. Fix oops in cifs_get_tcp_session.
Disable use of server inode numbers when server only
partially supports them (e.g. for one server querying inode numbers on
FindFirst fails but QPathInfo queries works). Fix oops with dfs in 
cifs_put_smb_ses. Fix mmap to work on directio mounts (needed
for OpenOffice when on forcedirectio mount e.g.)

Version 1.60
-------------
Fix memory leak in reconnect.  Fix oops in DFS mount error path.
Set s_maxbytes to smaller (the max that vfs can handle) so that
sendfile will now work over cifs mounts again.  Add noforcegid
and noforceuid mount parameters. Fix small mem leak when using
ntlmv2. Fix 2nd mount to same server but with different port to
be allowed (rather than reusing the 1st port) - only when the
user explicitly overrides the port on the 2nd mount.

Version 1.59
------------
Client uses server inode numbers (which are persistent) rather than
client generated ones by default (mount option "serverino" turned
on by default if server supports it).  Add forceuid and forcegid
mount options (so that when negotiating unix extensions specifying
which uid mounted does not immediately force the server's reported
uids to be overridden).  Add support for scope mount parm. Improve
hard link detection to use same inode for both.  Do not set
read-only dos attribute on directories (for chmod) since Windows
explorer special cases this attribute bit for directories for
a different purpose.

Version 1.58
------------
Guard against buffer overruns in various UCS-2 to UTF-8 string conversions
when the UTF-8 string is composed of unusually long (more than 4 byte) converted
characters. Add support for mounting root of a share which redirects immediately